Final styling for stats and blog sections
* Styled image marker for map
* Added blog content and styling
* Styled principals section
* Styled stats

--- a/public/partials/events.html
+++ b/public/partials/events.html
@@ -19,16 +19,16 @@
                     <h6>May 1, 2014</h6>
                     <h6>St. Louis, Missouri</h6>
                     <div class="event-comingup">Upcoming in May</div>
-                    <h3>Brag Pitch Night</h3>
+                    <a href="https://medium.com/female-entrepreneurs-of-the-world/f09f80a8cdf1"><h3>Brag Pitch Night</h3></a>
                     <p>
-                        <h7>We've all pitched our businesses a million times, but many women are uncomfortable standing up and bragging (showing off, talking about their strengths) in front of others. We want (and need) to get better at this! Check out Jennifer Blumberg's take on brag pitching, <a href="https://medium.com/p/253e6d7bd10a">"Why I’m glad I was forced to brag"
+                        <h7>We've all pitched our businesses a million times, but many women are really uncomfortable standing up and bragging (showing off, talking about their strengths) in front of others. We want (and need) to get better at this. What better way to get super vulnerable and step waaaay outside your comfort zone than with wine and good people?
                         </h7>
                     </p>
                 </div>
                 <div class="event-divider">
                     <h6>March 20, 2014 (7—8PM)</h6>
                     <h6>Santiago, Chile</h6>
-                    <h3><a href="https://medium.com/female-entrepreneurs-of-the-world/f09f80a8cdf1">Brag Pitch Night</a></h3>
+                    <a href="https://medium.com/female-entrepreneurs-of-the-world/f09f80a8cdf1"><h3>Brag Pitch Night</h3></a>
                     <p>
                         <h7>We've all pitched our businesses a million times, but many women are uncomfortable standing up and bragging (showing off, talking about their strengths) in front of others. We want (and need) to get better at this! Check out Jennifer Blumberg's take on brag pitching, <a href="https://medium.com/p/253e6d7bd10a">"Why I’m glad I was forced to brag"</a>.
                         </h7>
@@ -37,10 +37,10 @@
                 <div class="event-divider">
                     <h6>January 27, 2014 (6—8PM)</h6>
                     <h6>San Francisco, CA</h6>
-                    <h3>
-                        <a href="https://generalassemb.ly/education/women-in-tech-fireside-chat-with-freada-kapor-klein-and-heather-hiles">
-                        Women in Tech: Fireside Chat with Freada Kapor Klein and Heather Hiles & Moderated by Vivek Wadhwa</a>
-                    </h3>
+                    <a href="https://generalassemb.ly/education/women-in-tech-fireside-chat-with-freada-kapor-klein-and-heather-hiles">
+                        <h3>Women in Tech: Fireside Chat with Freada Kapor Klein and Heather Hiles & Moderated by Vivek Wadhwa</h3>
+                    </a>
+                    
                     <p>
                         <h7>It's no secret that being a female founder comes with a unique set of challenges. While fundraising can be difficult for all founders, recent studies show an alarmingly higher rate or fundraising success for male founders. Why is that? Is it a confidence issue? Is it unconscious bias telling investors that women are less capable leaders? Are women less likely to sell the hyper-growth storyline that investors crave? This event was organized by General Assembly and sponsored by FEW.</h7>
                     </p>
@@ -48,7 +48,9 @@
                 <div class="event-divider">
                     <h6>January 23, 2014 (6—8PM)</h6>
                     <h6>Santiago, Chile</h6>
-                    <h3><a href="https://www.facebook.com/events/448780538556922/">Small Talk—A Conversation Mixer</a></h3>
+                    <a href="https://www.facebook.com/events/448780538556922/">
+                        <h3>Small Talk—A Conversation Mixer</h3>
+                    </a>
                     <p>
                         <a href="https://www.facebook.com/events/448780538556922/">
                             <img src="https://fbcdn-sphotos-b-a.akamaihd.net/hphotos-ak-prn1/t31.0-8/883866_10102777883775453_844019930_o.jpg" width="550px" style="padding-top:10px;">
@@ -59,11 +61,9 @@
                 <div class="event-divider">                        
                     <h6>January 16, 2014 (7:30—10pm)</h6>
                     <h6>Santiago, Chile</h6>
-                    <h3>
-                        <a href="http://ignitesantiago.tumblr.com/post/73300957671/more-additions-to-the-lineup-a-few-good-women">
-                        FEW Blog Reading at Ignite Santiago
-                        </a>
-                    </h3>
+                    <a href="http://ignitesantiago.tumblr.com/post/73300957671/more-additions-to-the-lineup-a-few-good-women">
+                        <h3>FEW Blog Reading at Ignite Santiago</h3>
+                    </a>
                     <p>
                         <h7>Danielle Carruthers and Sarah Hebert, Principals at FEW, share excerpts from their writings at <a href="http://ignitesantiago.tumblr.com/">Ignite Santiago</a>. Read the full version of Danielle’s piece, <a href="https://medium.com/female-entrepreneurs-of-the-world/ee1dbe98910f">"Building The Mindset For Startup Success"</a> and Sarah’s piece, <a href="https://medium.com/female-entrepreneurs-of-the-world/23fbf2cfda62">"The Problem With Magical Thinking"</a>.
                         </h7>
@@ -72,7 +72,9 @@
                 <div class="event-divider">                        
                     <h6>December 6, 2013 (6—10pm)</h6>
                     <h6>Santiago, Chile</h6>
-                    <h3><a href="https://medium.com/p/3e18e0261fdc">TEDxSantiagoWomen</a></h3>
+                    <a href="https://medium.com/p/3e18e0261fdc">
+                        <h3>TEDxSantiagoWomen</h3>
+                    </a>
                     <p>
                         <a href="http://tedxsantiago.com/women.html">
                             <img src="https://fbcdn-sphotos-g-a.akamaihd.net/hphotos-ak-ash3/t31.0-8/1465785_648882455164055_697153128_o.jpg" width="650px" style="padding-top:10px;">
@@ -101,7 +103,9 @@
                 <div class="event-divider">
                     <h6>November 15, 2013 (6—8pm)</h6>
                     <h6>Santiago, Chile</h6>
-                    <h3><a href="https://medium.com/female-entrepreneurs-of-the-world/f09f80a8cdf1">Brag Pitch Night</a></h3>
+                    <a href="https://medium.com/female-entrepreneurs-of-the-world/f09f80a8cdf1">
+                        <h3>Brag Pitch Night</h3>
+                    </a>
                     <p>
                         <h7>Show Off Pitch Night is a unique way for the members of FEW to get to know each other better. We've all pitched our businesses a million times, but many women are really uncomfortable standing up and bragging (showing off, talking about their strengths) in front of others. We want (and need) to get better at this. What better way to get super vulnerable and step waaaay outside your comfort zone than with wine and good people?</h7>
                     </p>
