--- a/public/partials/principals.html
+++ b/public/partials/principals.html
@@ -4,8 +4,8 @@
             <div class="subhead-line center-block"></div>
         </div>
         <div class="row">
-            <div class="col-md-12">
-                <div class="media principal-container">
+            <div class="col-md-6">
+                <div class="media principal-container left">
                     <a class="pull-left" href="http://m.c.lnkd.licdn.com/mpr/mpr/shrink_200_200/p/7/005/009/269/3a3e101.jpg">
                         <img class="media-object" 
                             src="http://m.c.lnkd.licdn.com/mpr/mpr/shrink_200_200/p/7/005/009/269/3a3e101.jpg" 
@@ -15,16 +15,14 @@
                         <p class="media-heading principal-name">
                             <a href="http://www.linkedin.com/in/andreabouch">Andrea Bouch</a>
                         </p>
-                        <p class="principal-city">San Francisco, CA, US
-                        </p>
+                        <p class="principal-city">San Francisco, CA</p>
+                        <p class="principal-city">United States</p>
                      </div>
                 </div>
             </div>            
-        </div> 
-        
-        <div class="row">
-            <div class="col-md-12">
-                <div class="media principal-container">
+
+            <div class="col-md-6">
+                <div class="media principal-container right">
                     <a class="pull-left" href="http://m.c.lnkd.licdn.com/mpr/mpr/shrink_200_200/p/2/000/24f/0e0/2720973.jpg">
                         <img class="media-object" 
                             src="http://m.c.lnkd.licdn.com/mpr/mpr/shrink_200_200/p/2/000/24f/0e0/2720973.jpg" 
@@ -34,16 +32,16 @@
                         <p class="media-heading principal-name">
                             <a href="http://www.linkedin.com/in/allisoncarmen">Allison Carmen</a>
                         </p>
-                        <p class="principal-city">St. Louis, Missouri, US
-                        </p>
+                        <p class="principal-city">Saint Louis, MS</p>
+                        <p class="principal-city">United States</p>
                      </div>
                 </div>
             </div>            
         </div>    
         
         <div class="row">
-            <div class="col-md-12">
-                <div class="media principal-container">
+            <div class="col-md-6">
+                <div class="media principal-container left">
                     <a class="pull-left" href="http://m.c.lnkd.licdn.com/mpr/mpr/shrink_200_200/p/2/005/039/308/0a83010.jpg">
                         <img class="media-object" 
                             src="http://m.c.lnkd.licdn.com/mpr/mpr/shrink_200_200/p/2/005/039/308/0a83010.jpg" 
@@ -53,16 +51,14 @@
                         <p class="media-heading principal-name">
                             <a href="http://ca.linkedin.com/pub/danielle-carruthers/1b/264/845">Danielle Carruthers</a>
                         </p>
-                        <p class="principal-city">Calgary, Canada
-                        </p>
+                        <p class="principal-city">Calgary</p>
+                        <p class="principal-city">Canada</p>
                      </div>
                 </div>
             </div>            
-        </div>
 
-        <div class="row">
-            <div class="col-md-12">
-                <div class="media principal-container">
+            <div class="col-md-6">
+                <div class="media principal-container right">
                     <a class="pull-left" href="http://m.c.lnkd.licdn.com/mpr/mpr/shrink_200_200/p/2/000/1a9/215/32d034e.jpg">
                         <img class="media-object" 
                             src="http://m.c.lnkd.licdn.com/mpr/mpr/shrink_200_200/p/2/000/1a9/215/32d034e.jpg" 
@@ -72,8 +68,8 @@
                         <p class="media-heading principal-name">
                             <a href="http://cl.linkedin.com/in/komaldadlani">Komal Dadlani</a>
                         </p>
-                        <p class="principal-city">Santiago, Chile
-                        </p>
+                        <p class="principal-city">Santiago</p>
+                        <p class="principal-city">Chile</p>
                      </div>
                 </div>
             </div>            
@@ -81,7 +77,7 @@
         
         <div class="row">
             <div class="col-md-6">
-                <div class="media principal-container">
+                <div class="media principal-container left">
                     <a class="pull-left" href="http://m.c.lnkd.licdn.com/mpr/mpr/shrink_200_200/p/7/005/01e/193/395afa1.jpg">
                         <img class="media-object" 
                             src="http://m.c.lnkd.licdn.com/mpr/mpr/shrink_200_200/p/7/005/01e/193/395afa1.jpg" 
@@ -91,14 +87,14 @@
                         <p class="media-heading principal-name">
                             <a href="http://ca.linkedin.com/pub/sarah-h%C3%A9bert/55/868/338">Sarah Hébert</a>
                         </p>
-                        <p class="principal-city">Guatemala
-                        </p>
+                        <p class="principal-city">San Pedro La Laguna</p>
+                        <p class="principal-city">Guatemala</p>
                      </div>
                 </div>
             </div>            
         
             <div class="col-md-6">
-                <div class="media principal-container">
+                <div class="media principal-container right">
                     <a class="pull-left" href="http://m.c.lnkd.licdn.com/mpr/mpr/shrink_200_200/p/8/005/039/349/140ed97.jpg">
                         <img class="media-object" 
                             src="http://m.c.lnkd.licdn.com/mpr/mpr/shrink_200_200/p/8/005/039/349/140ed97.jpg" 
@@ -108,15 +104,17 @@
                         <p class="media-heading principal-name">
                             <a href="http://www.linkedin.com/in/leejen">Jen Lee (Founder)</a>
                         </p>
-                        <p class="principal-city">San Francisco, CA, US
-                        </p>
+                        <p class="principal-city">San Francisco, CA</p>
+                        <p class="principal-city">United States</p>
                      </div>
                 </div>
             </div>            
         </div>
         
+        
+        <div class="row">                  
             <div class="col-md-6">
-                <div class="media principal-container">
+                <div class="media principal-container left">
                     <a class="pull-left" href="http://m.c.lnkd.licdn.com/mpr/mpr/shrink_200_200/p/1/000/067/331/205e774.jpg">
                         <img class="media-object" 
                             src="http://m.c.lnkd.licdn.com/mpr/mpr/shrink_200_200/p/1/000/067/331/205e774.jpg" 
@@ -126,34 +124,33 @@
                         <p class="media-heading principal-name">
                             <a href="http://ve.linkedin.com/pub/lissette-rojas/0/825/536">Lissette Rojas</a>
                         </p>
-                        <p class="principal-city">Venezuela
-                        </p>
+                        <p class="principal-city">Caracas</p>
+                        <p class="principal-city">Venezuela</p>
                      </div>
                 </div>
             </div>            
-
-        <div class="row">
-            <div class="col-md-12">
-                <div class="media principal-container">
-                    <a class="pull-left" href="http://m.c.lnkd.licdn.com/media/p/7/000/1ba/148/265c2bc.jpg">
+        
+            <div class="col-md-6">
+                <div class="media principal-container right">
+                    <a class="pull-left" href="http://m.c.lnkd.licdn.com/mpr/mpr/shrink_200_200/p/4/005/052/254/1a609fc.jpg">
                         <img class="media-object" 
-                            src="http://m.c.lnkd.licdn.com/media/p/7/000/1ba/148/265c2bc.jpg" 
+                            src="http://m.c.lnkd.licdn.com/mpr/mpr/shrink_200_200/p/4/005/052/254/1a609fc.jpg" 
                             style="width: 70px; height: 70px;">
                     </a>
                     <div class="media-body">
                         <p class="media-heading principal-name">
                             <a href="http://www.linkedin.com/pub/aparna-sud/5a/962/875">Aparna Sud</a>
                         </p>
-                        <p class="principal-city">Boston, MA, US
-                        </p>
+                        <p class="principal-city">Boston, MA</p>
+                        <p class="principal-city">United States</p>
                      </div>
                 </div>
-            </div>            
+            </div>
         </div>
-
+  
         <div class="row">
-            <div class="col-md-12">
-                <div class="media principal-container">
+            <div class="col-md-6">
+                <div class="media principal-container left">
                     <a class="pull-left" href="http://m.c.lnkd.licdn.com/mpr/mpr/shrink_200_200/p/7/000/1e0/214/0255548.jpg">
                         <img class="media-object" 
                             src="http://m.c.lnkd.licdn.com/mpr/mpr/shrink_200_200/p/7/000/1e0/214/0255548.jpg" 
@@ -163,8 +160,8 @@
                         <p class="media-heading principal-name">
                             <a href="http://cl.linkedin.com/pub/andre%C3%ADna-zulueta/32/622/140/en">Andreina Zulueta</a>
                         </p>
-                        <p class="principal-city">Santiago, Chile
-                        </p>
+                        <p class="principal-city">Santiago</p>
+                        <p class="principal-city">Chile</p>
                      </div>
                 </div>
             </div>            
@@ -172,19 +169,12 @@
 
         <div class="row">
             <div class="col-md-12">            
-                <h5><a ng-click="showDescription=!showDescription">Interested in becoming a Principal of FEW?</a></h5>
+                <h5 class="principal-text"><a ng-click="showDescription=!showDescription">Interested in becoming a Principal of FEW?</a></h5>
                 <div class="animate-show"
                     ng-show="showDescription">
-                    <p>Becoming a principal is a commitment to FEW’s mission (link), and a larger opportunity to bring people together from all walks of life to discuss issues surrounding gender equality and entrepreneurship. We ask, on a yearly basis, that principals organize one event, contribute an original thought piece to our blog, and share relevant news and updates with the world through your own social networks.</p>
+                    <p>Becoming a principal is a commitment to <a ng-href="/mission">FEW’s mission</a>, and a larger opportunity to bring people together from all walks of life to discuss issues surrounding gender equality and entrepreneurship. We ask, on a yearly basis, that principals organize one event, contribute an original thought piece to our blog, and share relevant news and updates with the world through your own social networks.</p>
 
-                    <h3>Core Responsibilities:</h3>
-
-                    <p>Organize one event in your local area that aligns with FEW's mission of advancing women in entrepreneurship and promoting gender equality. This event could be an intimate Q&#38;A, social mixer, conference or gathering of any size, so long as it promotes the organization's overarching goals. Principals are expected to communicate event plans via email to other Principals in advance to receive feedback and advice. We're all in this together and our supportive community is there to guide you in such endeavors.</p>
-                    <p>Submit an original thought piece for our blog, while encouraging others to contribute to our written collection of articles. We seek both men and women writers.</p>
-                    <p>Promote FEW activities by sharing events, articles, resources through personal networks and inviting others to follow our social media channels.</p>
-                    <p>Stay connected with fellow FEW Principals by contributing new ideas, and offering feedback and advice.</p> 
-
-                    <p>If you’re interested in becoming a principal for F-E-W, please contact us at holafew@gmail.com. We look forward to hearing from you!</p>
+                    <p>If you’re interested in becoming a principal for F-E-W, please <a href="mailto:holafew@gmail.com">email</a> us. We look forward to hearing from you!</p>
                 </div>
             </div>
         </div>
