--- a/public/stylesheets/style.less
+++ b/public/stylesheets/style.less
@@ -22,6 +22,13 @@ h2 {
 h3 {
     font-weight: 700;
     line-height: 30px;
+    color: black;
+}
+
+a h3 {
+    &:hover {
+        color: #6600FF;
+    }
 }
 
 h5 {
@@ -85,11 +92,12 @@ h7 {
 
 .page.ng-enter,
 .page.ng-leave {
-   -webkit-transition: opacity ease-in-out 0.0s;
+   -webkit-transition: opacity ease-in-out 0.5s;
 }
 
 .page.ng-enter {
    opacity: 0;
+   transition-delay: 0.5s; 
 }
 
 .page.ng-enter-active {
@@ -98,11 +106,14 @@ h7 {
 
 .page.ng-leave {
     opacity: 1;
+    transition-delay: 0s; 
 }
 
 .page.ng-leave-active {
  opacity: 0;
 }
+
+
 
 .container-overlay h1 {
     font-size: 32px;
@@ -182,12 +193,12 @@ h7 {
 
 a {
     text-decoration: none !important;
-    color: #404040;
+    color: #6600FF;
     &:hover, &:focus {
         color:#6600FF !important;
     }
     &:visited {
-        color: #404040;
+        color: #6600FF;
     }
 }
 /*
@@ -315,8 +326,12 @@ a .nav-links {
 
 /* Info pop-up styling start */
 .few-info {
-    width: 300px;
-    padding: 10px;
+    min-width: 300px;
+    padding: 15px 0px 7px 12px
+}
+
+.few-info.few-thanks {
+    padding: 20px 10px 40px 20px;
 }
 
 .few-info div {
@@ -357,10 +372,10 @@ a .nav-links {
 }
 
 .thanks-line {
-    width: 90%;
-    border-bottom: 1px solid gray;
+    width: 100% !important;
+    border-bottom: 1px solid lightgray;
     height: 0px;
-    padding-top: 15px;
+    padding-top: 10px;
 }
 
 .tweet-btn-container {
@@ -369,15 +384,21 @@ a .nav-links {
 }
 
 .tweet-btn-container a {
-    color: #6600FF;
+    color: red;
     letter-spacing: 1px;
     font-size: 15px !important;
+    line-height: 29px;
 }
 
-.joined-timestamp {
-    float: right;
-    font-size: 11px;
+.few-info div.joined-timestamp {
+    float: left;
+    font-size: 13px !important;
     color: lightgray;
+    margin-bottom: 10px;
+}
+
+.company-description {
+    margin-bottom: 16px;
 }
 
 /* Info pop-up styling end */
@@ -395,7 +416,7 @@ a .nav-links {
 div.event-comingup {
     margin-top: 20px;
     margin-bottom: -18px;
-    color: #6600FF;
+    color: #F62817;
     font-weight: 500;
     font-style: italic;
     font-size: 15px;
@@ -451,13 +472,10 @@ input.checkbox-input {
 /* Participate end */
 
 /* Statistics start */
-.animate-show {
-top: 0;
-position: absolute;
-
-  opacity:1;
-  -webkit-transition:all linear 1s;
-  transition:all linear 1s;
+    .animate-show {
+    opacity:1;
+    -webkit-transition:all linear 1s;
+    transition:all linear 1s;
 }
  
 .animate-show.ng-hide-add,
@@ -473,9 +491,7 @@ position: absolute;
  
 .animate-show.ng-hide {
   opacity:0;
-  position:-100%;
 }
-
 
 .accordion-body {
   max-height: 100%;
@@ -541,23 +557,80 @@ position: absolute;
 /* Principals start */
 
 .principal-container {
-    padding-bottom: 30px;
+    padding-bottom: 40px;
 }
 
-.principal-name {
+.principal-container.right {
+    margin-left: 14px;
+}
+
+.principal-name a {
     font-weight: 700 !important;
-    font-size: 20px !important;
+    font-size: 15px !important;
     letter-spacing: 1px !important;
-    margin-top: 4px;
+    margin-top: -7px;
     margin-bottom: -4px;
-    margin-left: 10px;
+    margin-left: 5px;
+    line-height: 27px !important;
+    color: #404040;
 }
 
 .principal-city {
-    font-weight: 400;
-    font-size: 14px;
+    font-weight: 400 !important;
+    font-size: 13px !important;
     letter-spacing: 1px;
-    margin-left: 10px;
+    margin-left: 5px;
+    line-height: 7px !important;
+}
+
+.principal-text {
+    cursor: pointer;
+    margin-top: -5px;
+}
+
+.stat-list {
+    line-height: 40px;
+}
+
+.stat-list div {
+    color: #404040;
+    font-weight: 300;
+}
+
+.stat-list a div {
+    &:hover {
+        color: #6600FF;
+    }
+    &:visited {
+        color: #404040;
+    }
+}
+
+.stat-name-space {
+    margin-left: 5px;
+}
+
+div.stat-header {
+    font-weight: 700;
+    line-height: 22px;
+    color: black;
+    letter-spacing: 1px;
+    font-size: 17px;
+    width: 294px;
+    min-height: 29px;
+}
+
+.stat-column {
+    width: 258px;
+}
+
+.participant-timestamp {
+    font-weight: 400 !important;
+    font-size: 10px !important;
+    line-height: 12px;
+    margin-top: -6px;
+    letter-spacing: 1px;
+    color: lightgray;
 }
 
 /* Principals end */
@@ -574,8 +647,8 @@ position: absolute;
     border-radius: 0px !important;
 }
 
-.blog-thumbnail-row {
-    margin-bottom: 20px;
+.blog-thumbnail-row li {
+    margin-bottom: 25px;
 }
 
 .blog-thumbnail-inner {
@@ -629,6 +702,10 @@ position: absolute;
     padding: 40px;
 }
 
+.text-overlay.always-show {
+    opacity: 1;
+}
+
 .caption-overlay {
     position: absolute;
     bottom: 0;
@@ -647,8 +724,9 @@ div.caption-title {
     letter-spacing: 1px;
     font-size: 16px;
     color: white;
-    line-height: 23px;
+    line-height: 21px;
     margin-bottom: 5px;
+    min-height: 46px;
 }
 
 div.author,
@@ -660,6 +738,7 @@ div.author a {
     color: white;
     line-height: 17px;
     font-style: italic;
+    min-height: 17px;
 }
 
 .blog-thumbnail-inner:hover .caption-overlay {
@@ -673,6 +752,13 @@ p.continue-text {
     letter-spacing: 1px;    
     color: white;
 }
+
+.blog-contact {
+    width: 317px;
+    height: 254px;
+    background-color: #6600FF;
+}
+
 
 /* Blog end */
 
