--- a/public/partials/connect.html
+++ b/public/partials/connect.html
@@ -5,13 +5,18 @@
         </div>
         <div class="row">
             <div class="col-md-12 section-intro">
-                <p>Stay updated on our events and read articles written by the members of FEW</p>
+                <p>Stay updated on what we're up to and our events around the world, read original blogs written by the members of FEW, and engage in meaningful discussions about gender equality and entrepreneurship. Let's keep in touch!</p>
 
-                <p>Our Blog on Medium: medium.com/@holafew</p>
-                <p>Twitter: twitter.com/holafew</p>
-                <p>Facebook: facebook.com/holafew</p>
-                <p>LinkedIn: http://www.linkedin.com/company/female-entrepreneurs-of-the-world</p>
-                <p>Email: holafew@gmail.com</p>
+                <p>— <a href="http://medium.com/@holafew">Our Blog on Medium</a></p>
+                <p>— <a href="http://twitter.com/holafew">Twitter</a></p>
+                <p>— <a href="http://facebook.com/holafew">Facebook</a></p>
+                <p>— <a href="http://http://www.linkedin.com/company/female-entrepreneurs-of-the-world">LinkedIn</a></p>
+                <p>— <a href="mailto:holafew@gmail.com">Email</a></p>
+                
+                <p>For press inquiries, general questions, or if you're interested in becoming a principal of FEW, please <a href="mailto:holafew@gmail.com">email us</a>.</p>
+                
+                <p style="font-style:italic;'">ProjectFEW.org was designed and developed by the creators behind <a href="http://www.webcassette.com">Web Cassette</a>. The code for this site is freely available under the MIT Open Source Initiative on <a href="https://github.com/jenklee/few">GitHub</a>.</p>
+            
             </div>
         </div>
         <div class="row">
