--- a/public/partials/statistics.html
+++ b/public/partials/statistics.html
@@ -1,41 +1,61 @@
-<div class="col-md-4 col-md-offset-4 top-spacer">
+<div class="col-md-6 col-md-offset-3 top-spacer">
     <h2>Statistics</h2>
-    <div class="col-md-12">
+    <div class="col-md-6 col-md-offset-3">
         <div class="subhead-line center-block"></div>
     </div>
     <div class="row">
-        <div class="col-md-12">
-            <h4>Stats as of [January 3, 2013]:</h4>
-            <h6>{{members.count}} Contributors from {{cities | countryTotal }} Cities and {{countries | countryTotal }} Countries</h6>
-            <h2><a ng-click="showCountries=!showCountries">Countries</a></h2>
-            {{showCountries}}
-            <ul class="list-unstyled col-md-12 animate-show"
-                ng-show="showCountries">
-                <li ng-repeat="country in countries">
-                    <div class="col-md-1">{{country.count}}</div>
-                    <div class="col-md-11">{{country.long_name}}</div>
-                </li>
-            </ul>
-            <h2>Cities</h2>
-            <ul class="list-unstyled col-md-12">
-                <li ng-repeat="city in cities">
-                    <div class="col-md-1">{{city.count}}</div>
-                    <div class="col-md-11">{{city._id.long_name}}</div>
-                </li>
-            </ul>
+        
+        <div class="col-md-4">  
+            <div class="center-block stat-column">      
+                <div class="stat-header">{{participants.length}} Total Contributors</div>
+                <ul class="list-unstyled">
+                    <li ng-repeat="participant in participants"
+                        class="stat-list">
+                        <a ng-href="/?pin={{participant._id}}" target="_blank">
+                    
+                            <div class="row">
+                                <div class="col-md-12">{{participant.firstname}} {{participant.lastname}}</div>
+                            </div>
+                        </a>
+                    </li>
+                </ul>
+            </div>
         </div>
-    </div>
-    <div class="row">
-        <div class="col-md-12">  
-            <h4>{{founders.length}} Startup founded by women</h4>
-            <ul class="list-unstyled col-md-12">
-                <li ng-repeat="founder in founders">
-                    <a ng-href="{{founder._id.companyurl}}" target="_blank">
-                        <h6>{{founder._id.companyname}}</h6>
-                    </a>
-                </li>
-            </ul>
+        
+        <div class="col-md-4">
+            <div class="center-block stat-column">            
+                <div class="stat-header">Representing Countries</div>
+                <ul class="list-unstyled">
+                    <li ng-repeat="country in countries"
+                        class="stat-list">
+                        <div class="row">
+                            <div class="col-md-1">{{country.count}}</div>
+                            <div class="col-md-10 stat-name-space">{{country.long_name}}</div>
+                        </div>
+                    </li>
+                </ul>
+            </div>
         </div>
+        
+        
+        <div class="col-md-4">  
+            <div class="center-block stat-column">
+                <div class="stat-header">{{founders.length}} Startups Founded by Women</div>
+                <ul class="list-unstyled">
+                    <li ng-repeat="founder in founders"
+                        class="stat-list">
+                        <a ng-href="{{founder.companyurl}}" target="_blank">
+                            <div>{{founder.companyname}}</div>
+                        </a>
+                    </li>
+                </ul>
+            </div>
+        </div>
+        
+    
+
+        
+        
     </div>
     <div class="row">
         <div class="col-md-12 view-bottom-spacer">        
